# dmac-lab

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yaml  README.md  pyproject.toml  yamllint.yaml
.github/: CODEOWNERS  gitleaks.toml
.github/workflows/: checks.yaml
clab/: .gitignore  dmac.clab.yml  lab.clab.yml
clab/clab-multivendor/: ansible-inventory.yml
docs/: pre-commit.MD  uv.MD
nautobot/: invoke.yml  pyproject.toml  tasks.py
nautobot/config/: fw_addresses.json  nautobot_config.py
nautobot/environments/: Dockerfile-LDAP  docker-compose.base.yml  docker-compose.local.yml  docker-compose.postgres.yml  docker-compose.vscode-rdb.yml
nautobot/plugins/nautobot-ssot-fortimanager/: README.md  jobs.py  logs.sh.py  pyproject.toml
nautobot/plugins/nautobot-ssot-fortimanager/nautobot_ssot_fortimanager/: __init__.py  jobs.py
nautobot/plugins/nautobot-ssot-fortimanager/nautobot_ssot_fortimanager/diffsync/adapters/: fmanager.py  fw_addresses.json  nautobot.py
nautobot/plugins/nautobot-ssot-fortimanager/nautobot_ssot_fortimanager/diffsync/models/: base.py  nautobot.py
nautobot/plugins/nautobot-ssot-fortimanager/utilities/: Debugggin_test.py  IPAddress.json  django_fields.py  local_fields.py  nbshell-examples.py  relationship_model.py  tricks.py
nautobot/plugins/plugin_example/nautobot_example_plugin/: __init__.py
netbox-docker/: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
netbox-docker/docker/: docker-entrypoint.sh
