[tool]
ruff = { }


[tool.poetry]
name = "Nautobot Docker Compose - Dev Env"
version = "0.1.1"
description = "Nautobot Deployment for Testing"
authors = [ "Daniel Macuare <daniel280187@hotmail.com>" ]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
nautobot = "2.4.10"
#invoke = "^2.2.0"
#nautobot-golden-config = "^2.3.0"
nautobot-ssot = "^3.5.0"
#nautobot-bgp-models = "^2.3.0"
#nautobot-device-onboarding = "^4.2.1"
nautobot-firewall-models = "^2.2.2"
nautobot-ssot-fortimanager = {path = "plugins/nautobot-ssot-fortimanager"}


[tool.poetry.group.dev.dependencies]
invoke = "*"
toml = "*"
pre-commit = "^4.1.0"
ruff = "^0.11.12"
basedpyright = "^1.29.2"
ipython = "^9.3.0"
debugpy = "^1.8.14"


[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
