[tool.poetry]
name = "nautobot-ssot-fortimanager"
version = "0.1.1"
description = "Nautobot APP to pull data from FortiManager"
readme = "README.md"
authors = ["Daniel Macuare <daniel280187@hotmail.com>"]
packages = [{include = "nautobot_ssot_fortimanager"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
nautobot = "^2.4.2"
nautobot-ssot = "^3.8.1"
nautobot-firewall-models = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipython = "^9.3.0"
invoke = "^2.2.0"
pre-commit = "^4.2.0"
basedpyright = "^1.29.2"
toml = "^0.10.2"
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.basedpyright]
reportMissingTypeStubs = false
reportExplicitAny = "none"
reportUnusedImport = false
reportAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false

[tool.ruff]
line-length = 120
target-version = "py312"


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
line-ending = "lf"
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.