[tool.poetry]
name = "nautobot-ssot-fortimanager"
version = "0.1.1"
description = "Nautobot APP to pull data from FortiManager"
readme = "README.md"
authors = ["Daniel Macuare <daniel280187@hotmail.com>"]
packages = [{include = "nautobot_ssot_fortimanager"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
nautobot = "2.4.10"
nautobot-ssot = "^3.8.1"
nautobot-firewall-models = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipython = "^9.3.0"
invoke = "^2.2.0"
pre-commit = "^4.2.0"
basedpyright = "^1.29.2"
toml = "^0.10.2"
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.basedpyright]
reportMissingTypeStubs = false
reportExplicitAny = "none"
reportUnusedImport = false
reportAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnannotatedClassAttribute = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false

[tool.black]
line-length = 120
target-version = ["py312"]
exclue = '''
/(
    \.git
    | \.mypy_cache
    | \.venv
    | \build
    | \dist
    | \files/(?!(apps/))/*\.py # Exclude files directly in files/ and subdirs except files/apps/
)/
'''

# Use Double quotes for strings consistently (false = use double quotes)
skip-string-normalization = false

[tool.ruff]
line-length = 110
target-version = "py312"

exclude =  [
    ".git",
    "mypy_cache",
    "venv",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "E",   # Pycodestyle Error - Errors generated by flake8-pycodestyle
    "F",   # Pyflakes - General Python code issues (e.g., unused imports, undefined names)
    "I",   # Isort - Checks for improperly sorted imports
    "N",   # Pep8-Naming - Checks for violations of naming conventions (e.g., camelCase for functions)
    "B",   # Bugbear - Catches common Python programming mistakes and potential bugs
    "C4",  # Comprehensions - Enforces best practices for list, set, and dict comprehensions
    "SIM", # Simplify - Simplifies code constructs (e.g., redundant if statements, unused variables)
    "RUF"  # Ruff-specific rules - Rules implemented directly in Ruff that dont belong to other linters
]

ignore = [
    "E501",   # Line too long (often set to a specific character limit)
    "C408",   # Dict comprehension with a literal value (e.g., `dict(a=1, b=2)` instead of `{a: 1, b: 2}`)
    "S501",   # Bandit - Check for SSL/TLS certificate verification disabled (security warning)
    "RUF012", # Ruff-specific - Dict key `_attributes` should be a `tuple` (instead of list or other mutable type)
    "RUF013"  # Ruff-specific - Class `__init__` method has too many arguments (configurable limit)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
# Sort imports case-insensitively for predictable ordering
case-sensitive = false

# Don't sort by type (class, function, etc) to simplify import organization
order-by-type = false


# Combien imports with the same prefix for more concise import statements
combine-as-imports = true

# No blank line before local folde import oto reduce unnecessary whitespace
no-lines-before = ["local-folder"]

[tool.ruff.format]
line-ending = "lf"